fix #41: fix pull down to refresh widget visibility in dark mode

--- a/pwa/src/styles.scss
+++ b/pwa/src/styles.scss
@@ -397,3 +397,7 @@ app-list-of-related-cards .list .item:last-child {
     min-width: fit-content !important;
   }
 }
+
+.ptr--ptr *{
+  color: $secondary !important;
+}
